--- a/mcacountdown/schedulesbetav0b02.html
+++ b/mcacountdown/schedulesbetav0b02.html
@@ -320,6 +320,8 @@
         let schedule_exceptions = {};
         let schedule_editingEvent = null;
         let schedule_editingExceptionDay = null;
+        
+        alert("As of September 3rd, 2024 this beta is deprecated. It has been replaced by beta intgv0b01. Please us the latest Countdown Schedule or equivalent beta.");
 
         function schedule_encodeSchedule() {
             return btoa(JSON.stringify({ schedule_events, schedule_exceptions }));
