--- a/mcacountdown/closedbeta_integratedschedule.html
+++ b/mcacountdown/closedbeta_integratedschedule.html
@@ -373,7 +373,7 @@
         <a id="second" class="disabled" onclick="second();"><i class="fa-solid fa-stopwatch-20"></i> Seconds</a>
         <a id="millisecond" class="disabled" onclick="millisecond();"><i class="fa-solid fa-meteor"></i> Milliseconds</a>
     </center>
-    <div class="schedule-editor"></div>
+    <div class="schedule-editor" style="color: white !important;">
         <div class="schedule-container">
             <h1>Daily Schedule Editor</h1>
             
@@ -417,6 +417,7 @@
                 <div id="schedule-exceptionList"></div>
             </div>
         </div>
+    </div>
     </div>
 </div>
 
