--- a/mcacountdown/closedbeta_integratedschedule.html
+++ b/mcacountdown/closedbeta_integratedschedule.html
@@ -1210,10 +1210,10 @@ border: 1px solid rgba(255, 0, 0, 0.64);
             
     #savedash {
         font-family: 'Fredoka One';
-        background-color: #ffbe5d;
+        background-color: #FF9900;
         text-decoration: none;
         color: #ffffff;
-        box-shadow: 0 7px 0 #FF9900;
+        box-shadow: 0 7px 0 #c77700;
         border-radius: 20px;
         padding: 20px;
         user-select: none;
@@ -1224,7 +1224,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
 
         #savedash:hover {
             position: relative;
-            box-shadow: 0 5px 0 #FF9900;
+            box-shadow: 0 5px 0 #c77700;
         }
 
             #savedash:hover:active {
