--- a/mcacountdown/closedbeta_integratedschedule.html
+++ b/mcacountdown/closedbeta_integratedschedule.html
@@ -157,7 +157,7 @@
         <br>
         <Br>
         <a onclick="settings(); SetCountDowngeneral();"><i class="fa-solid fa-gear"></i> Close</a>
-        <a id="sharebuttonoptions" href="#linkoptions"><<i class="fa-solid fa-arrow-up-from-bracket"></i> Share</a>
+        <a id="sharebuttonoptions" href="#linkoptions"><i class="fa-solid fa-arrow-up-from-bracket"></i> Share</a>
         <a id="savedash" onclick="savetodash();"><i class="fa-solid fa-star"></i> Save Countdown</a>
         <a id="reset" class="warning" onclick="resetcookies();"><i class="fa-solid fa-trash"></i> Discard Countdown</a>
 
