--- a/mcacountdown/closedbeta_integratedschedule.html
+++ b/mcacountdown/closedbeta_integratedschedule.html
@@ -492,6 +492,10 @@
         scrollbar-color: #8426ff #0d0d0d;
     }
 
+    html{
+        scroll-behavior: smooth;
+    }
+
     ::-moz-selection {
         color: white;
         background: #8426ff;
