--- a/mcacountdown/closedbeta_integratedschedule.html
+++ b/mcacountdown/closedbeta_integratedschedule.html
@@ -158,8 +158,8 @@
         <Br>
         <a onclick="settings(); SetCountDowngeneral();"><i class="fa-solid fa-gear"></i> Close</a>
         <a id="sharebuttonoptions" href="#linkoptions"><i class="fa-solid fa-arrow-up-from-bracket"></i> Share</a>
-        <a id="savedash" onclick="savetodash();"><i class="fa-solid fa-star"></i> Save Countdown</a>
-        <a id="reset" class="warning" onclick="resetcookies();"><i class="fa-solid fa-trash"></i> Discard Countdown</a>
+        <a id="savedash" onclick="savetodash();"><i class="fa-solid fa-star"></i> Save</a>
+        <a id="reset" class="warning" onclick="resetcookies();"><i class="fa-solid fa-trash"></i> Discard</a>
 
         <div style="width:100%; margin:0px; padding:0px; border-top: #242424 2px solid; border-bottom: #242424 2px solid; margin-top: 150px; background: linear-gradient(to right, rgba(0,0,0,0), rgba(57,184,251,0.2))">
             <h1><i style="color: #39B8FB" class="fa-solid fa-paper-plane"></i> Shareable Options</h1>
