--- a/mcacountdown/closedbeta_integratedschedule.html
+++ b/mcacountdown/closedbeta_integratedschedule.html
@@ -1218,7 +1218,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
         background-color: #FF9900;
         text-decoration: none;
         color: #ffffff;
-        box-shadow: 0 7px 0 #c77700;
+        box-shadow: 0 7px 0 #bf7200;
         border-radius: 20px;
         padding: 20px;
         user-select: none;
@@ -1229,7 +1229,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
 
         #savedash:hover {
             position: relative;
-            box-shadow: 0 5px 0 #c77700;
+            box-shadow: 0 5px 0 #bf7200;
         }
 
             #savedash:hover:active {
