--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -222,16 +222,16 @@ function startDragging(e, card) {
     draggedElement.style.width = `${rect.width}px`;
     draggedElement.style.height = `${rect.height}px`;
 
-    // Calculate the offset of the mouse position relative to the card's center
-    const offsetX = e.clientX - (rect.left + rect.width / 2);
-    const offsetY = e.clientY - (rect.top + rect.height / 2);
-
-    // Set the initial position of the dragged element
-    updateElementPosition(e.clientX, e.clientY);
+    // Calculate the offset of the mouse position relative to the card's top-left corner
+    const offsetX = e.clientX - rect.left;
+    const offsetY = e.clientY - rect.top;
 
     // Store the offset for use in the drag function
     draggedElement.dataset.offsetX = offsetX;
     draggedElement.dataset.offsetY = offsetY;
+
+    // Set the initial position of the dragged element
+    updateElementPosition(e.clientX, e.clientY);
 
     // Add the drag handler
     document.addEventListener('mousemove', drag);
@@ -242,21 +242,23 @@ function drag(e) {
     
     updateElementPosition(e.clientX, e.clientY);
 
-    const cards = document.querySelectorAll('.card:not(.placeholder)');
+    const cards = Array.from(document.querySelectorAll('.card:not(.placeholder)'));
     let closestCard = null;
     let closestDistance = Infinity;
     let newIndex = startIndex;
+
+    const draggedRect = draggedElement.getBoundingClientRect();
+    const dragCenterX = draggedRect.left + draggedRect.width / 2;
+    const dragCenterY = draggedRect.top + draggedRect.height / 2;
 
     cards.forEach((card, index) => {
         if (card !== draggedElement) {
             const rect = card.getBoundingClientRect();
             const centerX = rect.left + rect.width / 2;
             const centerY = rect.top + rect.height / 2;
-            const distance = Math.hypot(e.clientX - centerX, e.clientY - centerY);
+            const distance = Math.hypot(dragCenterX - centerX, dragCenterY - centerY);
 
-            if (Math.abs(e.clientX - centerX) < rect.width * 0.6 &&
-                Math.abs(e.clientY - centerY) < rect.height * 0.6 &&
-                distance < closestDistance) {
+            if (distance < closestDistance) {
                 closestDistance = distance;
                 closestCard = card;
                 newIndex = index;
@@ -265,11 +267,19 @@ function drag(e) {
     });
 
     if (closestCard) {
-        const currentIndex = Array.from(cards).indexOf(placeholder);
+        const closestRect = closestCard.getBoundingClientRect();
+        const isAfter = dragCenterY > closestRect.top + closestRect.height / 2 ||
+                        (dragCenterY <= closestRect.top + closestRect.height / 2 && dragCenterX > closestRect.left + closestRect.width / 2);
+
+        if (isAfter) {
+            newIndex++;
+        }
+
+        const currentIndex = cards.indexOf(draggedElement);
         if (newIndex !== currentIndex) {
             // Move the placeholder to the new position
             closestCard.parentNode.insertBefore(placeholder, 
-                newIndex > currentIndex ? closestCard.nextSibling : closestCard);
+                isAfter ? closestCard.nextSibling : closestCard);
         }
     }
 }
@@ -332,13 +342,15 @@ function updateCardIndices() {
 }
 
 function updateElementPosition(mouseX, mouseY) {
-    const offsetX = parseFloat(draggedElement.dataset.offsetX);
-    const offsetY = parseFloat(draggedElement.dataset.offsetY);
-    const width = parseFloat(draggedElement.style.width);
-    const height = parseFloat(draggedElement.style.height);
+    var positionInfo = draggedElement.getBoundingClientRect();
+    var height = positionInfo.height;
+    var width = positionInfo.width;
+
+    const offsetX = width / 2;
+    const offsetY = height / 2;
     
-    draggedElement.style.left = `${mouseX - width / 2 - offsetX}px`;
-    draggedElement.style.top = `${mouseY - height / 2 - offsetY}px`;
+    draggedElement.style.left = `${mouseX - offsetX}px`;
+    draggedElement.style.top = `${mouseY - offsetY}px`;
 }
 
 document.getElementById('addButton').addEventListener('click', addLink);
