--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@600&display=swap" rel="stylesheet">
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Countdown Dashboard</title>
@@ -371,6 +376,7 @@ loadLinks();
 }
 
 h1 {
+    font-family: 'Fredoka One';
     text-align: center;
     color: #333;
 }
@@ -430,6 +436,7 @@ button:hover {
 .card h3 {
     margin: 0;
     padding-right: 30px;
+    font-family: 'Dosis' , sans-serif;
 }
 
 .remove-button {
