--- a/about.html
+++ b/about.html
@@ -21,6 +21,15 @@
     <meta property="og:url" content="https://michaeldors.com/about"/>
     <link rel="apple-touch-icon" href="Images/homescreen.png">
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1DKXNCSFTP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1DKXNCSFTP');
+</script>
 <body id="body">
     <nav id="navigation" class="navdown">
         <div class="topofnav">
