--- a/projects.html
+++ b/projects.html
@@ -21,6 +21,15 @@
     <meta property="og:site_name" content="Michael Dors" />
     <link rel="apple-touch-icon" href="Images/homescreen.png">
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1DKXNCSFTP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1DKXNCSFTP');
+</script>
 <body id="body">
     <div id="filterbar" class="downfilterbar">
         <a class="sphericalbutton" onmouseup="togglefilters()"><i class="fa-solid fa-filter"></i> Refine</a>
