--- a/marginexperiment/margin.html
+++ b/marginexperiment/margin.html
@@ -121,6 +121,15 @@
             }
         </style>
     </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1DKXNCSFTP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1DKXNCSFTP');
+</script>
     <title>Margin</title>
     <body style="background-color: #EEEFF3;">
         <div class="header">
