--- a/perspective/playground.html
+++ b/perspective/playground.html
@@ -6,6 +6,15 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
         <title>Perspective</title>
     </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1DKXNCSFTP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1DKXNCSFTP');
+</script>
     <body>
         <div id="ex1" class="container" style="pointer-events: all;">
             <div id="ex1-layer" class="onebox">
