--- a/tareaapp/index.html
+++ b/tareaapp/index.html
@@ -16,6 +16,15 @@
           <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1DKXNCSFTP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1DKXNCSFTP');
+</script>
     <body>
         <div class="tracker sm-hidden"></div>
         <div class="header" style="display: none;">
