--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -27,13 +27,13 @@
     <link rel="apple-touch-icon" href="Images/countdownhomescreen.png">
 </head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-KPM7Q7ECT8"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LCNP5E1F65"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-KPM7Q7ECT8');
+  gtag('config', 'G-LCNP5E1F65');
 </script>
 
 <body id="body" style="background-color:#141414;  overflow-x:hidden;">
