--- a/mcacountdown/schedulesbetav0b01.html
+++ b/mcacountdown/schedulesbetav0b01.html
@@ -185,6 +185,15 @@
             }
         </style>
     </head>
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LCNP5E1F65"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LCNP5E1F65');
+</script>
     <body>
         <div class="viewer" id="viewer">
             <div class="current-class" id="currentClass">
