--- a/mcacountdown/Information/cookiepolicy.html
+++ b/mcacountdown/Information/cookiepolicy.html
@@ -11,6 +11,15 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8617127534193636"
             crossorigin="anonymous"></script>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LCNP5E1F65"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LCNP5E1F65');
+</script>
   
 <body style="background-color:#141414; overflow-x:hidden;">
     <a class="aintext" href="../timer.html"><i style="color:white; font-size:20px;" class="fa-solid fa-house"></i></a>
