--- a/mcacountdown/preamble/index.html
+++ b/mcacountdown/preamble/index.html
@@ -7,6 +7,15 @@
         <title>Preamble</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LCNP5E1F65"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LCNP5E1F65');
+</script>
     <body>
       <p class="text" id="1" onclick="Submit1()">"We the People of the United States, </p>
       <p class="text" id="2" onclick="Submit2()">in Order to form a more perfect Union, </p>
