--- a/mcacountdown/Information/cookiepolicy.html
+++ b/mcacountdown/Information/cookiepolicy.html
@@ -26,17 +26,39 @@
 
     <center style="margin: 0; position: absolute; left: 50%; -ms-transform: translate(-50%, 0%); transform: translate(-50%, 0%);">
         <h1>Cookie Policy</h1>
-        <p>Countdown utilizes cookies to save your changes. Cookies are small files that store preferences, passwords, or other data in a browser. In our case, we use cookies to save your preferences in the options/settings menu.</p>
-        <p>
-            <br>
-            Countdown uses cookies to improve the overall user experience, and give you more accessibility options and general settings. We only save cookies when a preference inside of the options/settings menu is enabled.
-            <br>
-            <br>
-            You can opt-out of cookies multiple ways. If you simply do not use the settings menu, you will not have any cookies placed on your device. If you have already enabled options, you can click the "Reset All" option in the options/settings menu and then reload the page, or individually disable each preference. In most browsers, you can also remove cookies through the browser UI.
-            <br>
-            <br>
-            If you have questions about cookies or anything else, feel free to reach out to us at contact@michaeldors.com
-        </p>
+<p>Countdown utilizes cookies to enhance your experience and improve the website's performance. Cookies are small files stored on your browser to save preferences, track usage, and gather analytical data. Here’s how we use them:</p>
+
+<h2>Types of Cookies We Use</h2>
+<p>We use two main types of cookies:</p>
+<ul>
+  <li><strong>Essential Cookies</strong>: These cookies are crucial for the basic functioning of the website, such as saving your preferences in the options/settings menu.</li>
+  <li><strong>Analytics Cookies</strong>: We use Google Analytics to gather information about how users interact with our site. This helps us understand visitor behavior and improve our services.</li>
+</ul>
+
+<h2>Use of Cookies</h2>
+<p>We utilize cookies to save your accessibility settings and other personal options, which are only stored when enabled and deleted when disabled. Analytics cookies are used to track and report website traffic and usage statistics.</p>
+
+<h2>Cookie Duration</h2>
+<p>Settings cookies are saved for 70 days or until the setting is disabled. Google Analytics cookies vary in duration depending on their purpose (session-based or persistent).</p>
+
+<h2>Managing Cookies</h2>
+<p>You can opt out of cookies in several ways:
+  <br>
+  - Avoid using personal options to prevent any cookies from being placed on your device.
+  <br>
+  - Use the "Reset All" option in the options menu to clear all personal options cookies, then reload the page.
+  <br>
+  - Manually reset/disable each preference through the personal section of the options menu.
+  <br>
+  - Remove cookies through your browser’s UI.
+</p>
+
+<h2>Consent and Transparency</h2>
+<p>We inform users about our use of cookies and seek consent before placing non-essential cookies on your device. By continuing to use our site, you agree to our use of cookies.</p>
+
+<h2>Contact</h2>
+<p>If you have questions about cookies or anything else, feel free to reach out to us at <a href="mailto:contact@michaeldors.com">contact@michaeldors.com</a></p>
+
 </body>
   <style>
     .wifitext{
